[project]
name = "meal-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.99.9",
    "pillow>=11.3.0",
    "pint>=0.25",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.43",
]
